[gd_scene load_steps=15 format=3 uid="uid://bey6fhrbn55h0"]

[ext_resource type="Script" path="res://node/actor/actor.gd" id="1_j5pgg"]
[ext_resource type="Material" uid="uid://cs41y0404k2al" path="res://asset/vfx/dither.tres" id="1_p8v8q"]
[ext_resource type="Script" path="res://node/spotlight.gd" id="2_wd4nt"]
[ext_resource type="SpriteFrames" uid="uid://tukt3tca2rch" path="res://asset/actor/sprite/default.tres" id="3_y0ns7"]
[ext_resource type="AudioStream" uid="uid://b0pwyevl8fgtr" path="res://asset/sfx/move.mp3" id="5_mlp70"]
[ext_resource type="AudioStream" uid="uid://c8d4dpg2oxhid" path="res://asset/sfx/spotlight_on.mp3" id="6_ql4jc"]
[ext_resource type="AudioStream" uid="uid://blxh2fo38mxsd" path="res://asset/sfx/spotlight_off.mp3" id="7_cqwoq"]
[ext_resource type="PackedScene" uid="uid://dkcvlj3ybfd6b" path="res://node/dice_roll.tscn" id="8_b6iue"]

[sub_resource type="Animation" id="Animation_itah3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:offset:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_rbjyw"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.501961, 0.498039, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4.0, -4.0, 0.0]
}

[sub_resource type="Animation" id="Animation_jtl2j"]
resource_name = "defeated"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pg0xa"]
_data = {
"RESET": SubResource("Animation_itah3"),
"damaged": SubResource("Animation_rbjyw"),
"defeated": SubResource("Animation_jtl2j")
}

[sub_resource type="Gradient" id="Gradient_8xtn0"]
colors = PackedColorArray(0.721569, 0.666667, 0.690196, 0, 0.721569, 0.666667, 0.690196, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vyyqk"]
playback_mode = 1
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_mlp70")
stream_0/weight = 1.0

[node name="Actor" type="CharacterBody2D"]
material = ExtResource("1_p8v8q")
motion_mode = 1
script = ExtResource("1_j5pgg")

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(0, -7, 15, 0, 0, 7, -15, 0)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = ExtResource("3_y0ns7")
animation = &"idle_down"
offset = Vector2(0, -24)

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pg0xa")
}

[node name="DuringTurn" type="Node2D" parent="."]
visible = false
light_mask = 0

[node name="Spotlight" type="Node2D" parent="DuringTurn"]
z_index = -1
scale = Vector2(2, 1)
script = ExtResource("2_wd4nt")

[node name="Path" type="Line2D" parent="DuringTurn"]
top_level = true
light_mask = 0
z_index = -1
material = ExtResource("1_p8v8q")
width = 3.0
default_color = Color(0.721569, 0.666667, 0.690196, 1)
gradient = SubResource("Gradient_8xtn0")

[node name="StepCount" type="Label" parent="DuringTurn"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -64.0
offset_right = 16.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.721569, 0.666667, 0.690196, 1)
text = "0"
horizontal_alignment = 1

[node name="DiceRoll" parent="." instance=ExtResource("8_b6iue")]
position = Vector2(0, -64)

[node name="SFX" type="Node2D" parent="."]

[node name="Move" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_vyyqk")

[node name="SpotlightOn" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6_ql4jc")

[node name="SpotlightOff" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("7_cqwoq")
